fixing image visibiliry
responsive page. fixed image bahaving not intending at smaller screens

fixed footer image behave

--- a/test/master.css
+++ b/test/master.css
@@ -31,7 +31,6 @@ body{
 .button:hover{
   background-color: #ce3d36;}
 
-
 .red_bg_color{
   background-color: #8a0700;
 }
@@ -55,16 +54,22 @@ footer{
   width: 50%;
 }
 
+.footer_img{
+  display: block;
+ 
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+  min-width: 100px;
+}
+
 /*annet*/
 .div_border{
   border-style: solid;
   border-width: 2px;
 }
 
-.center_fb{
-  margin: auto;
-  width: 400px;
-}
+
 .center_content{
   margin: auto;
   width: 50%;
@@ -135,48 +140,12 @@ li{
 }
 
 .image{
-  width: 48%;
-  margin: auto;
-  
-}
-
-/*Tabell*/ 
-/*.center_conntent tr:nth-child(even){
-  background-color: #f2f2f2;}
-.center_content td, .center_content th {
-  border: 1px solid #ddd;
-  padding: 8px;}
-*/
-.tabell1 {
-  font-family: Arial, Helvetica, sans-serif;
-  border-collapse: collapse;
-  width: 100%;
-  margin: 0 auto;
-}
-
-.table_wrapper{ 
-  /*nødvendig for at tabell skal kunne skrolle horisontalt 
-    og samtidig sentrert pga display:block i tabell1*/
-    display: block;
-    overflow-x: auto;
-    white-space: nowrap;
-}
-
-.tabell1 td, .tabell1 th {
-  border: 1px solid #ddd;
-  padding: 8px;
-}
-
-.tabell1 tr:nth-child(even){
-  background-color: #f2f2f2;
-}
-
-.tabell1 th {
-  padding-top: 12px;
-  padding-bottom: 12px;
-  text-align: left;
-  background-color: white;
-  color: black;
+  display: block;
+  position: relative;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+  min-width: 350px;
 }
 
 .pictures{
@@ -231,7 +200,9 @@ li{
     .info{
       width: 100%;
     }
-
+    .image{
+      min-width: 450px;
+    }
     
 
     
@@ -271,6 +242,10 @@ li{
       margin-top: 10px;
       padding: 0 10px 30px 10px;
       box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    }
+    .image{
+      width: 100%;
+      min-width: 0;
     }
 
 
